--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "express": "^4.21.2",
+    "firebase": "^10.0.0",
+    "firebaseui": "^6.1.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
