--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.21.2",
     "firebase": "^10.0.0",
     "firebaseui": "^6.1.0",
+    "polished": "^4.3.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
